Fixed a couple of bugs, !join commands after a user is already in is now ignored, and prevented usernames of players overlapping - also changed where the players list is displayed

--- a/src/client/styles.css
+++ b/src/client/styles.css
@@ -1,4 +1,5 @@
 .header { grid-area: header; }
+.player-area { grid-area: player-area; }
 .menu { grid-area: menu; }
 .streamer { grid-area: streamer; }
 .streamer-words { grid-area: streamer-words; }
@@ -9,6 +10,7 @@
   display: grid;
   grid-template-areas:
     'header header header header header header header'
+    'player-area player-area player-area player-area player-area player-area player-area'
     'menu streamer streamer streamer chat chat chat'
     'menu streamer-words streamer-words streamer-words chat-words chat-words chat-words';
   grid-gap: 10px;
@@ -47,8 +49,12 @@ div.players > h4 {
 .profileImageContainer {
   margin: 10px;
   font-size: 0.5em;
-  padding: 15px;
-  width: 70px;
+  width: 100px;
   display: inline-block;
   text-align: center;
+}
+
+.nameTag {
+  overflow:hidden;
+  text-overflow:ellipsis;
 }
